did changes to index html
replaced a ref to button

--- a/index.htm
+++ b/index.htm
@@ -25,7 +25,7 @@
     <main>
       <section>
         <h1>Эффективные решения для вашего бизнеса</h1>
-        <a href="">Замовити послугу</a>
+        <button>Замовити послугу</button>
       </section>
       <section>
         <ul>
