--- a/index.htm
+++ b/index.htm
@@ -120,11 +120,11 @@
     </main>
     <footer>
       <a href="./index.htm">WebStudio</a>
-      <div>
+      <address>
         <p>г. Киев, пр-т Леси Украинки, 26</p>
         <p><a href="mailto:info@devstudio.com">info@devstudio.com</a></p>
         <p><a href="tel:+380961111111">+38 096 111 11 11</a></p>
-      </div>
+      </address>
     </footer>
   </body>
 </html>
