--- a/index.htm
+++ b/index.htm
@@ -63,13 +63,13 @@
         <h2>Чем мы занимаемся</h2>
         <ul>
           <li>
-            <img src="./images/whatwedo/box1.png" alt="1" width="370" />
+            <img src="./images/whatwedo/box1.jpg" alt="1" width="370" />
           </li>
           <li>
-            <img src="./images/whatwedo/box2.png" alt="2" width="370" />
+            <img src="./images/whatwedo/box2.jpg" alt="2" width="370" />
           </li>
           <li>
-            <img src="./images/whatwedo/box3.png" alt="3" width="370" />
+            <img src="./images/whatwedo/box3.jpg" alt="3" width="370" />
           </li>
         </ul>
       </section>
