--- a/index.htm
+++ b/index.htm
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ua">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -25,33 +25,34 @@
     <main>
       <section>
         <h1>Эффективные решения для вашего бизнеса</h1>
-        <button>Замовити послугу</button>
+        <button type="button">Замовити послугу</button>
       </section>
       <section>
+        <h2>Про себе</h2>
         <ul>
           <li>
-            <h2>Внимание к деталям</h2>
+            <h3>Внимание к деталям</h3>
             <p>
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
-            <h2>Пунктуальность</h2>
+            <h3>Пунктуальность</h3>
             <p>
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
-            <h2>Планирование</h2>
+            <h3>Планирование</h3>
             <p>
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
-            <h2>Современные технологии</h2>
+            <h3>Современные технологии</h3>
             <p>
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
@@ -60,60 +61,62 @@
         </ul>
       </section>
       <section>
-        <h2>Чем мы занимаемся</h2>
+        <h2>Чим ми займаємось</h2>
         <ul>
           <li>
-            <img src="./images/whatwedo/box1.jpg" alt="1" width="370" />
+            <img
+              src="./images/whatwedo/box1.jpg"
+              alt="project photo1"
+              width="370"
+            />
           </li>
           <li>
-            <img src="./images/whatwedo/box2.jpg" alt="2" width="370" />
+            <img
+              src="./images/whatwedo/box2.jpg"
+              alt="project photo2"
+              width="370"
+            />
           </li>
           <li>
-            <img src="./images/whatwedo/box3.jpg" alt="3" width="370" />
+            <img
+              src="./images/whatwedo/box3.jpg"
+              alt="project photo3"
+              width="370"
+            />
           </li>
         </ul>
       </section>
 
       <section>
-        <h2>Чем мы занимаемся</h2>
+        <h2>Хто ми</h2>
         <ul>
           <li>
-            <figure>
-              <img
-                src="./images/team/PD.jpg"
-                alt="Product Designer"
-                width="370"
-              />
-              <figcaption>
-                <h3>Ігор Демяненко</h3>
-                <p>Product Designer</p>
-              </figcaption>
-            </figure>
-            <figure>
-              <img
-                src="./images/team/FED.jpg"
-                alt="Frontend Developer"
-                width="370"
-              />
-              <figcaption>
-                <h3>Ольга Регіна</h3>
-                <p>Frontend Developer</p>
-              </figcaption>
-            </figure>
-            <figure>
-              <img src="./images/team/M.jpg" alt="Marketing" width="370" />
-              <figcaption>
-                <h3>Микола Тарасов</h3>
-                <p>Marketing</p>
-              </figcaption>
-            </figure>
-            <figure>
-              <img src="./images/team/UID.jpg" alt="UI Designer" width="370" />
-              <figcaption>
-                <h3>Михайло Єрмаков</h3>
-                <p>UI Designer</p>
-              </figcaption>
-            </figure>
+            <img
+              src="./images/team/PD.jpg"
+              alt="Product Designer"
+              width="370"
+            />
+            <h3>Ігор Демяненко</h3>
+            <p lang="en">Product Designer</p>
+          </li>
+          <li>
+            <img
+              src="./images/team/FED.jpg"
+              alt="Frontend Developer"
+              width="370"
+            />
+            <h3>Ольга Регіна</h3>
+            <p lang="en">Frontend Developer</p>
+          </li>
+          <li>
+            <img src="./images/team/M.jpg" alt="Marketing" width="370" />
+            <h3>Микола Тарасов</h3>
+            <p lang="en">Marketing</p>
+          </li>
+          <li>
+            <img src="./images/team/UID.jpg" alt="UI Designer" width="370" />
+            <h3>Михайло Єрмаков</h3>
+            <p lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -122,8 +125,10 @@
       <a href="./index.htm">WebStudio</a>
       <address>
         <p>г. Киев, пр-т Леси Украинки, 26</p>
-        <p><a href="mailto:info@devstudio.com">info@devstudio.com</a></p>
-        <p><a href="tel:+380961111111">+38 096 111 11 11</a></p>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
       </address>
     </footer>
   </body>
