--- a/index.htm
+++ b/index.htm
@@ -4,17 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles/styles.css" />
     <title>Document</title>
+    <link rel="stylesheet" href="./styles/styles.css" />
   </head>
   <body>
     <header class="header">
       <nav>
         <a href="./index.htm">WebStudio</a>
         <ul>
-          <li><a href="/studio">Студія</a></li>
-          <li><a href="/portfolio">Портфоліо</a></li>
-          <li><a href="/contacs">Контакти</a></li>
+          <li><a href="./studio.html">Студія</a></li>
+          <li><a href="./portfolio.html">Портфоліо</a></li>
+          <li><a href="./contacs.html">Контакти</a></li>
         </ul>
       </nav>
       <ul>
